<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
<modelVersion>4.0.0</modelVersion>
<groupId>com.nextbreakpoint</groupId>
<artifactId>com.nextbreakpoint.nextfractal</artifactId>
<version>2.1.5</version>
<packaging>pom</packaging>
<name>NextFractal</name>
<description>NextFractal is a fractal generator</description>
<url>https://github.com/nextbreakpoint/nextfractal</url>
<licenses>
 <license>
		 <name>GPL 3</name>
		 <url>http://nextbreakpoint.com/licenses/GPLv3</url>
 </license>
</licenses>
<developers>
 <developer>
		 <name>Andrea Medeghini</name>
		 <email>andrea@nextbreakpoint.com</email>
 </developer>
</developers>
<scm>
 <connection>scm:git:git@github.com:nextbreakpoint/nextfractal.git</connection>
 <developerConnection>scm:git:git@github.com:nextbreakpoint/nextfractal.git</developerConnection>
 <url>scm:git:git@github.com:nextbreakpoint/nextfractal.git</url>
</scm>
<modules>
 <module>com.nextbreakpoint.nextfractal.core</module>
 <module>com.nextbreakpoint.nextfractal.mandelbrot</module>
 <module>com.nextbreakpoint.nextfractal.contextfree</module>
 <module>com.nextbreakpoint.nextfractal.runtime</module>
 <module>com.nextbreakpoint.nextfractal.core.javafx</module>
 <module>com.nextbreakpoint.nextfractal.mandelbrot.javafx</module>
 <module>com.nextbreakpoint.nextfractal.contextfree.javafx</module>
 <module>com.nextbreakpoint.nextfractal.runtime.javafx</module>
 <module>com.nextbreakpoint.nextfractal.main</module>
</modules>
<properties>
 <java.version>21</java.version>
 <java.release>21</java.release>
 <maven.compiler.source>21</maven.compiler.source>
 <maven.compiler.target>21</maven.compiler.target>
 <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 <ffmpeg4java.version>3.1.1-1.1</ffmpeg4java.version>
 <freeimage4java.version>3.18.0-1.2</freeimage4java.version>
 <try4java.version>2.0.4</try4java.version>
 <antlr4.version>4.13.1</antlr4.version>
 <commonmath3.version>3.6.1</commonmath3.version>
 <rxjava.version>2.2.21</rxjava.version>
 <rxjavafx.version>2.2.2</rxjavafx.version>
 <openjfx.version>21.0.1</openjfx.version>
 <jackson.version>2.16.0</jackson.version>
 <junit.version>5.10.1</junit.version>
 <assertj.version>3.24.2</assertj.version>
 <mockito.version>5.8.0</mockito.version>
 <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
 <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
 <maven-compiler-plugin.version>3.12.0</maven-compiler-plugin.version>
 <maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
 <maven-surefire-plugin.version>3.2.3</maven-surefire-plugin.version>
 <maven-toolchains-plugin.version>3.1.0</maven-toolchains-plugin.version>
 <maven-dependency-plugin.version>3.6.1</maven-dependency-plugin.version>
 <maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
 <build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
 <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
 <nexus.host>https://oss.sonatype.org</nexus.host>
 <nexus.url>https://oss.sonatype.org/content/repositories/snapshots</nexus.url>
 <nexus.autoreleaseafterclose>true</nexus.autoreleaseafterclose>
 <bintray.url>https://api.bintray.com/maven/${bintrayAccount}/maven/${project.artifactId}/;publish=1</bintray.url>
</properties>
<build>
 <plugins>
		 <plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-toolchains-plugin</artifactId>
				 <version>${maven-toolchains-plugin.version}</version>
				 <executions>
						 <execution>
								 <phase>validate</phase>
								 <goals>
										 <goal>toolchain</goal>
								 </goals>
						 </execution>
				 </executions>
				 <configuration>
						 <toolchains>
								 <jdk>
										 <version>[21,)</version>
								 </jdk>
						 </toolchains>
				 </configuration>
		 </plugin>
		 <plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-source-plugin</artifactId>
				 <version>${maven-source-plugin.version}</version>
				 <executions>
						 <execution>
								 <id>attach-sources</id>
								 <goals>
										 <goal>jar</goal>
								 </goals>
						 </execution>
				 </executions>
		 </plugin>
		 <plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-javadoc-plugin</artifactId>
				 <version>${maven-javadoc-plugin.version}</version>
				 <executions>
						 <execution>
								 <id>attach-javadocs</id>
								 <goals>
										 <goal>jar</goal>
								 </goals>
								 <configuration>
										 <failOnError>false</failOnError>
								 </configuration>
						 </execution>
				 </executions>
		 </plugin>
		 <plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-compiler-plugin</artifactId>
				 <version>${maven-compiler-plugin.version}</version>
		 </plugin>
		 <plugin>
				 <groupId>org.apache.maven.plugins</groupId>
				 <artifactId>maven-surefire-plugin</artifactId>
				 <version>${maven-surefire-plugin.version}</version>
				 <configuration>
						 <parallel>none</parallel>
						 <forkCount>0</forkCount>
						 <systemProperties>
								 <property>
										 <name>cfdg.root</name>
										 <value>${project.basedir}/src/test/resources</value>
								 </property>
						 </systemProperties>
						 <!--<systemPropertyVariables>-->
						 <!--<propertyName>cfdg.root</propertyName>-->
						 <!--<buildDirectory>${project.basedir}/src/test/resources</buildDirectory>-->
						 <!--</systemPropertyVariables>-->
				 </configuration>
		 </plugin>
 </plugins>
</build>
<dependencyManagement>
 <dependencies>
		 <dependency>
				 <groupId>com.nextbreakpoint</groupId>
				 <artifactId>com.nextbreakpoint.ffmpeg4java</artifactId>
				 <version>${ffmpeg4java.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>com.nextbreakpoint</groupId>
				 <artifactId>com.nextbreakpoint.freeimage4java</artifactId>
				 <version>${freeimage4java.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>com.nextbreakpoint</groupId>
				 <artifactId>com.nextbreakpoint.try4java</artifactId>
				 <version>${try4java.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>org.openjfx</groupId>
				 <artifactId>javafx-controls</artifactId>
				 <version>${openjfx.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>org.openjfx</groupId>
				 <artifactId>javafx-fxml</artifactId>
				 <version>${openjfx.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>org.antlr</groupId>
				 <artifactId>antlr4-runtime</artifactId>
				 <version>${antlr4.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>org.apache.commons</groupId>
				 <artifactId>commons-math3</artifactId>
				 <version>${commonmath3.version}</version>
		 </dependency>
		 <dependency>
			 <groupId>com.fasterxml.jackson.core</groupId>
			 <artifactId>jackson-core</artifactId>
			 <version>${jackson.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>com.fasterxml.jackson.core</groupId>
				 <artifactId>jackson-databind</artifactId>
				 <version>${jackson.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>com.fasterxml.jackson.core</groupId>
				 <artifactId>jackson-annotations</artifactId>
				 <version>${jackson.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>io.reactivex.rxjava2</groupId>
				 <artifactId>rxjavafx</artifactId>
				 <version>${rxjavafx.version}</version>
		 </dependency>
		 <dependency>
				 <groupId>io.reactivex.rxjava2</groupId>
				 <artifactId>rxjava</artifactId>
				 <version>${rxjava.version}</version>
		 </dependency>
		 <dependency>
			 <groupId>org.junit</groupId>
			 <artifactId>junit-bom</artifactId>
			 <version>${junit.version}</version>
			 <type>pom</type>
			 <scope>import</scope>
		 </dependency>
		 <dependency>
				 <groupId>org.mockito</groupId>
				 <artifactId>mockito-core</artifactId>
				 <version>${mockito.version}</version>
		 </dependency>
		 <dependency>
			 <groupId>org.assertj</groupId>
			 <artifactId>assertj-core</artifactId>
			 <version>${assertj.version}</version>
		 </dependency>
 </dependencies>
</dependencyManagement>
<dependencies>
	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-api</artifactId>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-engine</artifactId>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.junit.jupiter</groupId>
		<artifactId>junit-jupiter-params</artifactId>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.assertj</groupId>
		<artifactId>assertj-core</artifactId>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.mockito</groupId>
		<artifactId>mockito-core</artifactId>
		<scope>test</scope>
	</dependency>
</dependencies>
<profiles>
 <profile>
		 <id>windows_x86_64</id>
		 <properties>
				 <build.type>win32_x86_64</build.type>
				 <arch.type>x86_64</arch.type>
				 <os.type>windows</os.type>
		 </properties>
 </profile>
 <profile>
		 <id>debian_x86_64</id>
		 <properties>
				 <build.type>linux_x86_64</build.type>
				 <arch.type>x86_64</arch.type>
				 <os.type>linux</os.type>
		 </properties>
 </profile>
 <profile>
		 <id>fedora_x86_64</id>
		 <properties>
				 <build.type>linux_x86_64</build.type>
				 <arch.type>x86_64</arch.type>
				 <os.type>linux</os.type>
		 </properties>
 </profile>
 <profile>
		 <id>osx_x86_64</id>
		 <activation>
				 <activeByDefault>true</activeByDefault>
		 </activation>
		 <properties>
				 <build.type>macos_x86_64</build.type>
				 <arch.type>x86_64</arch.type>
				 <os.type>mac</os.type>
		 </properties>
 </profile>
 <profile>
		 <id>ossrh</id>
		 <activation>
				 <property>
						 <name>channel</name>
						 <value>ossrh</value>
				 </property>
		 </activation>
		 <build>
				 <plugins>
						 <plugin>
								 <groupId>org.apache.maven.plugins</groupId>
								 <artifactId>maven-gpg-plugin</artifactId>
								 <version>${maven-gpg-plugin.version}</version>
								 <executions>
										 <execution>
												 <id>sign-artifacts</id>
												 <phase>verify</phase>
												 <goals>
														 <goal>sign</goal>
												 </goals>
										 </execution>
								 </executions>
						 </plugin>
						 <plugin>
								 <groupId>org.sonatype.plugins</groupId>
								 <artifactId>nexus-staging-maven-plugin</artifactId>
								 <version>${nexus-staging-maven-plugin.version}</version>
								 <extensions>true</extensions>
								 <configuration>
										 <serverId>ossrh</serverId>
										 <nexusUrl>${nexus.host}</nexusUrl>
										 <autoReleaseAfterClose>${nexus.autoreleaseafterclose}</autoReleaseAfterClose>
								 </configuration>
						 </plugin>
				 </plugins>
		 </build>
		 <distributionManagement>
				 <snapshotRepository>
						 <id>ossrh</id>
						 <url>${nexus.url}</url>
				 </snapshotRepository>
		 </distributionManagement>
  </profile>
 </profiles>
</project>
